# Ray-Tracer-Starter

./: .gitignore  CMakeLists.txt  README.md  RayTracer.vcxproj  geometry.h  raytracer.cpp
